tests/baselines/reference/typeOfThisInStaticMembers13(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
typeOfThisInStaticMembers13.ts(4,16): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
typeOfThisInStaticMembers13.ts(4,17): error TS2465: 'this' cannot be referenced in a computed property name.
typeOfThisInStaticMembers13.ts(4,22): error TS2339: Property 'c' does not exist on type 'typeof Inner'.
typeOfThisInStaticMembers13.ts(5,9): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
typeOfThisInStaticMembers13.ts(5,10): error TS2465: 'this' cannot be referenced in a computed property name.
typeOfThisInStaticMembers13.ts(5,15): error TS2339: Property 'c' does not exist on type 'Inner'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== typeOfThisInStaticMembers13.ts (6 errors) ====
    class C {
        static readonly c: "foo" = "foo"
        static bar =  class Inner {
            static [this.c] = 123;
                   ~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
                    ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
                         ~
!!! error TS2339: Property 'c' does not exist on type 'typeof Inner'.
            [this.c] = 123;
            ~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
             ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
                  ~
!!! error TS2339: Property 'c' does not exist on type 'Inner'.
        }
    }
    